[tool.poetry]
name = "radconpy"
version = "0.2.0"
description = "Small library to work with RadCon"
authors = ["Patryk Filip Gryz <pfgryz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyserial = "^3.5"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
